# homepress

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  LICENSE.txt  README.md  index.html  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yaml
homepress/: __init__.py  __main__.py  bindermath.py  cli.py  pages.py  pdfbinder.py  press.py  progress.py
homepress/layout/: __init__.py  pages.py
homepress/legacy/: cli.py  errors.py  pdfbinder.py
homepress/renderer/: __init__.py  multi_renderer.py  mupdf_renderer.py  page_range_renderer.py  pil_renderer.py  renderer_abc.py
logo/: README.md
static/css/: main.css
static/js/: main.js
tests/: data.py  test_get_renderer.py  test_multi_renderer.py  test_page_range_renderer.py  test_press.py  test_renderer.py  test_renderer_mupdf.py  test_renderer_pil.py
tests/testdata/: LICENSE.txt  xps-document-example.xps
tests/testdata/clach04_sample_reading_media/: README.md  build.sh  source_test_book_fb2.fb2  source_test_book_fb2_zip.fbz  test_book_docx.docx  test_book_epub.epub  test_book_epub_more_detail.epub  test_book_fb2.fb2  test_book_html.html  test_book_rtf.rtf  test_book_txt_crlf_win.txt
tests/testdata/filesamples.com/: Alices Adventures in Wonderland.fb2  Around the World in 28 Languages.fb2  Sway.fb2  sample1.fb2
