[tool.poetry]
name = "homepress"
version = "2.0.0"
description = "An All in One Home based book printing software solution. Can be used as a library."
authors = ["Amaan Ahmad Khan"]
license = "MIT License"
readme = "README.md"
packages = [{include = "homepress"}]

[tool.poetry.dependencies]
python = "^3.12"
PyMuPDF = "^1.24.10"
tqdm = "^4.66.1"
pillow = "^10.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
homepress = "homepress.cli:run"
